[STP-999] - add exam exclude